--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,11 @@
 services:
   - type: web
-    name: carecompanion-keywordextractor
+    name: medical-keyword-api
     env: python
-    buildCommand: |
-      pip install -r requirements.txt
-      python -m spacy download en_core_web_sm
-    startCommand: python _app.py
+    plan: free
+    buildCommand: pip install -r requirements.txt
+    startCommand: python keyword_app.py
+    envVars:
+      - key: PORT
+        value: 10001
     plan: free
